k8s-apps/argocd/templates/ingress-cli.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-cli-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: home.diogomota.pt
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false" # 403 on the github actions runner
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.diogomota.pt
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /application.ApplicationService/(Get|List|ManagedResources)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /session.SessionService/Create
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /cluster.SettingsService/Get
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /cluster.ClusterService/Get
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /project.ProjectService/GetDetailedProject
            pathType: ImplementationSpecific
