k8s-apps/argocd/templates/ingress-healthcheck.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-healthcheck-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: home.diogomota.pt
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false" # 403 on the github actions runner
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.diogomota.pt
    # - host: k8s-ingress.snow-delta.ts.net
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            # path: /argocd/healthz
            path: /healthz
            pathType: ImplementationSpecific
