k8s-apps/argocd/templates/ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-webhook-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: home.diogomota.pt
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false" # 403 on the github actions runner
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.diogomota.pt
    # - host: k8s-ingress.snow-delta.ts.net
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            # path: /argocd/api/webhook
            path: /api/webhook
            pathType: ImplementationSpecific
